--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,4 +1,6 @@
 <#include "header.html">
+<link rel="stylesheet" href="../styles/index.css">
+<link rel="stylesheet" href="../styles/detail.css">
     <div class="zg-wrap zu-main clearfix " role="main">
         <div class="zu-main-content">
             <div class="zu-main-content-inner">
@@ -36,8 +38,7 @@
                                                 <a class="zm-item-vote-count js-expand js-vote-count" href="javascript:;" data-bind-votecount="">4168</a></div>
                                             <div class="zm-item-answer-author-info">
                                                 <a class="author-link" data-tip="p$b$amuro1230" target="_blank" href="/user/${vo.user.id}">${vo.user.name}</a>
-                                            ${vo.question.createDate?string("yyyy-MM-dd HH:mm:ss")}
-                                            </div>
+                                                ${vo.question.createDate?string("yyyy-MM-dd HH:mm:ss")}</div>
                                             <div class="zm-item-vote-info" data-votecount="4168" data-za-module="VoteInfo">
                                                 <span class="voters text">
                                                     <a href="#" class="more text">
@@ -72,4 +73,4 @@
             </div>
         </div>
     </div>
-<#include "footer.html">
+    <#include "footer.html">
